5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4367/executions/1577_1334.log
== SUBMITION (2019-03-18 23:24:15) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 16-8)

print("Multiplicacao: ", 2*4)

print("Divisao: ", 16/2)

print("Resto: ", 24//4)

print("Potenciacao: ", 2**3)
-- EXECUTION TIME:
0.156847
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  6
Potenciacao:  8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-18 23:24:34) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 16-8)

print("Multiplicacao: ", 2*4)

print("Divisao: ", 16/2)

print("Resto: ", 16/2)

print("Potenciacao: ", 2**3)
-- EXECUTION TIME:
0.151755
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8.0
Potenciacao:  8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 23:24:38) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 16-8)

print("Multiplicacao: ", 2*4)

print("Divisao: ", 16/2)

print("Resto: ", 16/2)

print("Potenciacao: ", 2**3)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8.0
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 23:25:57) 
-- CODE:
print("Adicao: ", 4+4)

print("Subtracao: ", 17-9)

print("Multiplicacao: ", 4*2)

print("Divisao: ", 16/2)

print("Resto: ", 16/2)

print("Potenciacao: ", 2**3)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8.0
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-18 23:26:04) 
-- CODE:
print("Adicao: ", 4+4)

print("Subtracao: ", 17-9)

print("Multiplicacao: ", 4*2)

print("Divisao: ", 16/2)

print("Resto: ", 16/2)

print("Potenciacao: ", 2**3)
-- EXECUTION TIME:
0.142593
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8.0
Potenciacao:  8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 23:27:57) 
-- CODE:
print("Adicao: ", 4 + 4)

print("Subtracao: ", 17 - 9)

print("Multiplicacao: ", 4 * 2 )

print("Divisao: ", 16/2)

print("Resto: ", 16/2)

print("Potenciacao: ", 2**3)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8.0
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-18 23:28:04) 
-- CODE:
print("Adicao: ", 4 + 4)

print("Subtracao: ", 17 - 9)

print("Multiplicacao: ", 4 * 2 )

print("Divisao: ", 16/2)

print("Resto: ", 16/2)

print("Potenciacao: ", 2**3)
-- EXECUTION TIME:
0.152003
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8.0
Potenciacao:  8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 23:46:11) 
-- CODE:
print("Adicao: ", 4 + 4)

print("Subtracao: ", 17 _ 9)

print("Multiplicacao: ", 4 * 2 )

print("Divisao: ", 16/2)

print("Resto: ", 16/2)

print("Potenciacao: ", 2**3)
-- ERROR:
File "XXXX", line 3
    print("Subtracao: ", 17 _ 9)
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 23:46:42) 
-- CODE:
print("Adicao: ", 4 + 4)

print("Subtracao: ", 17 - 9)

print("Multiplicacao: ", 4 * 2 )

print("Divisao: ", 16/2)

print("Resto: ", 16/2)

print("Potenciacao: ", 2**3)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8.0
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-18 23:46:47) 
-- CODE:
print("Adicao: ", 4 + 4)

print("Subtracao: ", 17 - 9)

print("Multiplicacao: ", 4 * 2 )

print("Divisao: ", 16/2)

print("Resto: ", 16/2)

print("Potenciacao: ", 2**3)
-- EXECUTION TIME:
0.198803
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8.0
Potenciacao:  8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 00:03:12) 
-- CODE:
print("Adicao: ", 4 + 4)

print("Subtracao: ", 17 - 9)

print("Multiplicacao: ", 4 * 2)

print("Divisao: ", 16/2)

print("Resto: ", 16/2)

print("Potenciacao: ", 2**3)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8.0
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 00:03:23) 
-- CODE:
print("Adicao: ", 4 + 4)

print("Subtracao: ", 17 - 9)

print("Multiplicacao: ", 4 * 2)

print("Divisao: ", 16/2)

print("Resto: ", 16/2)

print("Potenciacao: ", 2**3)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8.0
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 00:03:37) 
-- CODE:
print("Adicao: ", 4 + 4)

print("Subtracao: ", 17 - 9)

print("Multiplicacao: ", 4 * 2)

print("Divisao: ", 16/2)

print("Resto: ", 16/2)

print("Potenciacao: ", 2**3)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8.0
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 00:03:44) 
-- CODE:
print("Adicao: ", 4 + 4)

print("Subtracao: ", 17 - 9)

print("Multiplicacao: ", 4 * 2)

print("Divisao: ", 16/2)

print("Resto: ", 16/2)

print("Potenciacao: ", 2**3)
-- EXECUTION TIME:
0.158623
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8.0
Potenciacao:  8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 00:23:10) 
-- CODE:
print("Adicao: ", 4+4)

print("Subtracao: ", 17-9)

print("Multiplicacao: ", 4*2)

print("Divisao: ", 16/2)

print("Resto: ", 16/2)

print("Potenciacao: ", 2**3)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8.0
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 00:23:32) 
-- CODE:
print("Adicao: ", 4+4)

print("Subtracao: ", 17-9)

print("Multiplicacao: ", 2*2*2)

print("Divisao: ", 16/2)

print("Resto: ", 16/2)

print("Potenciacao: ", 2**3)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8.0
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 00:23:38) 
-- CODE:
print("Adicao: ", 4+4)

print("Subtracao: ", 17-9)

print("Multiplicacao: ", 2*2*2)

print("Divisao: ", 16/2)

print("Resto: ", 16/2)

print("Potenciacao: ", 2**3)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8.0
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 00:24:16) 
-- CODE:
print("Adicao: ", 8+0)

print("Subtracao: ", 16-8)

print("Multiplicacao: ", 8*1)

print("Divisao: ", 16/2)

print("Resto: ", 16/2)

print("Potenciacao: ", 2**3)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8.0
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 00:24:21) 
-- CODE:
print("Adicao: ", 8+0)

print("Subtracao: ", 16-8)

print("Multiplicacao: ", 8*1)

print("Divisao: ", 16/2)

print("Resto: ", 16/2)

print("Potenciacao: ", 2**3)
-- EXECUTION TIME:
0.213375
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8.0
Potenciacao:  8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 00:25:56) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 9-1)

print("Multiplicacao: ", 4*2)

print("Divisao: ", 16/2)

print("Resto: ", 16/2)

print("Potenciacao: ", 2**3)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8.0
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 00:26:05) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 9-1)

print("Multiplicacao: ", 4*2)

print("Divisao: ", 16/2)

print("Resto: ", 16/2)

print("Potenciacao: ", 2**3)
-- EXECUTION TIME:
0.147135
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8.0
Potenciacao:  8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 00:28:54) 
-- CODE:
print("Adicao: ", 5 + 3.upper())

print("Subtracao: ", 9-1.upper())

print("Multiplicacao: ", 4*2.upper())

print("Divisao: ", 16/2.upper())

print("Resto: ", 16/2.upper)

print("Potenciacao: ", 2**3.upper())
-- ERROR:
File "XXXX", line 1
    print("Adicao: ", 5 + 3.upper())
                                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 00:29:22) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 9-1.upper())

print("Multiplicacao: ", 4*2.upper())

print("Divisao: ", 16/2.upper())

print("Resto: ", 16/2.upper)

print("Potenciacao: ", 2**3.upper())
-- ERROR:
File "XXXX", line 3
    print("Subtracao: ", 9-1.upper())
                                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 00:29:39) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 9-1)

print("Multiplicacao: ", 4*2.upper())

print("Divisao: ", 16/2.upper())

print("Resto: ", 16/2.upper)

print("Potenciacao: ", 2**3.upper())
-- ERROR:
File "XXXX", line 5
    print("Multiplicacao: ", 4*2.upper())
                                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 00:29:59) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 9-1)

print("Multiplicacao: ", 4*2)

print("Divisao: ", 16/2.upper())

print("Resto: ", 16/2.upper)

print("Potenciacao: ", 2**3.upper())
-- ERROR:
File "XXXX", line 7
    print("Divisao: ", 16/2.upper())
                                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 00:30:31) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 9-1)

print("Multiplicacao: ", 4*2)

print("Divisao: ", 16/2)

print("Resto: ", 16/2)

print("Potenciacao: ", 2**3)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8.0
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 00:31:12) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 9-1)

print("Multiplicacao: ", 4*2)

print("Divisao: ", 16/2)

print("Resto: ", 24/3)

print("Potenciacao: ", 2**3)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8.0
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 00:31:25) 
-- CODE:
print("Adicao: ", )

print("Subtracao: ", 9-1)

print("Multiplicacao: ", 4*2)

print("Divisao: ", 16/2)

print("Resto: ", 24/3)

print("Potenciacao: ", 2**3)
-- OUTPUT:
Adicao: 
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8.0
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 00:31:27) 
-- CODE:
print("Adicao: ", )

print("Subtracao: ", 9-1)

print("Multiplicacao: ", 4*2)

print("Divisao: ", 16/2)

print("Resto: ", 24/3)

print("Potenciacao: ", 2**3)
-- OUTPUT:
Adicao: 
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8.0
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 00:31:37) 
-- CODE:
print("Adicao: ", )

print("Subtracao: ", 9-1)

print("Multiplicacao: ", 4*2)

print("Divisao: ", 16/2)

print("Resto: ", 24/3)

print("Potenciacao: ", )
-- OUTPUT:
Adicao: 
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8.0
Potenciacao:
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 00:34:03) 
-- CODE:
print("Adicao: ", 5+3)

print("Subtracao: ", ...)

print("Multiplicacao: ", ...)

print("Divisao: ", ...)

print("Resto: ", ...)

print("Potenciacao: ", ...)
-- OUTPUT:
Adicao:  8
Subtracao:  Ellipsis
Multiplicacao:  Ellipsis
Divisao:  Ellipsis
Resto:  Ellipsis
Potenciacao:  Ellipsis
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 00:34:41) 
-- CODE:
print("Adicao: ", 6+2)

print("Subtracao: ", 9-1)

print("Multiplicacao: ", ...)

print("Divisao: ", ...)

print("Resto: ", ...)

print("Potenciacao: ", ...)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  Ellipsis
Divisao:  Ellipsis
Resto:  Ellipsis
Potenciacao:  Ellipsis
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 00:36:02) 
-- CODE:
print("Adicao: ", 6+2)

print("Subtracao: ", 9-1)

print("Multiplicacao: ", 4*2)

print("Divisao: ", 16/2)

print("Resto: ", 24/3)

print("Potenciacao: ", 2**3)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8.0
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 00:36:07) 
-- CODE:
print("Adicao: ", 6+2)

print("Subtracao: ", 9-1)

print("Multiplicacao: ", 4*2)

print("Divisao: ", 16/2)

print("Resto: ", 24/3)

print("Potenciacao: ", 2**3)
-- EXECUTION TIME:
0.148587
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8.0
Potenciacao:  8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 00:36:47) 
-- CODE:
print("Adicao:", 6+2)

print("Subtracao:", 9-1)

print("Multiplicacao:", 4*2)

print("Divisao:", 16/2)

print("Resto:", 24/3)

print("Potenciacao:", 2**3)
-- OUTPUT:
Adicao: 8
Subtracao: 8
Multiplicacao: 8
Divisao: 8.0
Resto: 8.0
Potenciacao: 8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 00:36:52) 
-- CODE:
print("Adicao:", 6+2)

print("Subtracao:", 9-1)

print("Multiplicacao:", 4*2)

print("Divisao:", 16/2)

print("Resto:", 24/3)

print("Potenciacao:", 2**3)
-- EXECUTION TIME:
0.129843
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao: 8
Subtracao: 8
Multiplicacao: 8
Divisao: 8.0
Resto: 8.0
Potenciacao: 8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 00:37:27) 
-- CODE:
print("Adicao:", 6+2)

print("Subtracao:", 9-1)

print("Multiplicacao:", 4*2)

print("Divisao:", 16//2)

print("Resto:", 24/3)

print("Potenciacao:", 2**3)
-- OUTPUT:
Adicao: 8
Subtracao: 8
Multiplicacao: 8
Divisao: 8
Resto: 8.0
Potenciacao: 8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 00:37:44) 
-- CODE:
print("Adicao:", 6+2)

print("Subtracao:", 9-1)

print("Multiplicacao:", 4*2)

print("Divisao:", 16/2)

print("Resto:", 24//3)

print("Potenciacao:", 2**3)
-- OUTPUT:
Adicao: 8
Subtracao: 8
Multiplicacao: 8
Divisao: 8.0
Resto: 8
Potenciacao: 8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 00:37:52) 
-- CODE:
print("Adicao:", 6+2)

print("Subtracao:", 9-1)

print("Multiplicacao:", 4*2)

print("Divisao:", 16/2)

print("Resto:", 24//3)

print("Potenciacao:", 2**3)
-- EXECUTION TIME:
0.169491
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao: 8
Subtracao: 8
Multiplicacao: 8
Divisao: 8.0
Resto: 8
Potenciacao: 8
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
